# BraveMining

./: .gitignore
src/: .gitignore
src/base/mac/: foundation_util.mm
src/brave/: DEPS  package-lock.json
src/brave/browser/: BUILD.gn  brave_browser_process_impl.cc  brave_browser_process_impl.h
src/brave/components/minter_miner_vpn/browser/: BUILD.gn  base_miner_vpn_service.cc  base_miner_vpn_service.h  dat_file_util.cc  dat_file_util.h  mining_vpn_resource_dispatcher_host_delegate.cc  mining_vpn_resource_dispatcher_host_delegate.h  mining_vpn_resource_throttle.cc  mining_vpn_resource_throttle.h  mining_vpn_service.cc  mining_vpn_service.h  mining_vpn_util.cc  mining_vpn_util.h  mining_vpn_web_contents_observer.cc  mining_vpn_web_contents_observer.h
src/brave/patches/: chrome-browser-extensions-component_extensions_whitelist-whitelist.cc.patch
src/brave/script/: init-brave-extension.py  redirect-cc.cmd  sign_binaries.py
src/chrome/: BUILD.gn
src/chrome/app/: BUILD.gn  OWNERS  chrome_command_ids.h  chrome_dll.rc  chrome_main.cc  settings_strings.grdp
src/chrome/browser/: BUILD.gn  browser_process_impl.cc  browser_process_impl.h  chrome_browser_main.cc  chrome_browser_main.h  chrome_browser_main_win.cc  chrome_content_browser_client.cc  chrome_content_browser_client.h  io_thread.cc  shell_integration_linux.cc
src/chrome/common/: BUILD.gn  channel_info_mac.mm  chrome_constants.cc  chrome_paths_linux.cc  chrome_paths_mac.mm  pref_names.cc  pref_names.h
src/chrome/install_static/: BUILD.gn
src/chrome/renderer/: chrome_content_renderer_client.cc  (+2 more)
(+136 files in other folders)
